apps/filebrowser/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: filebrowser-additional
  namespace: filebrowser
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10G"
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
    - hosts:
        - &host files.tmem.de
      secretName: filebrowser-additional-tls
  rules:
    - host: *host
      http:
        paths:
          - path: /share
            pathType: Prefix
            backend:
              service:
                name: filebrowser
                port:
                  number: 80
          - path: /static
            pathType: Prefix
            backend:
              service:
                name: filebrowser
                port:
                  number: 80
